--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.8'
+version: '3.9'
 services:
-  flask-app:
+  api:
     build: .
     ports:
-      - "6000:6000"
+      - "8080:8080"
     volumes:
-      - .:/WS_app
+      - .:/WS_app.py
     environment:
-      - FLASK_APP=WS_app.py
+      FLASK_DEBUG: "true"
